# kmm-web

./: .dockerignore  .env  .env.example  .env.production.example  .env.staging.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-deploy.sh  docker-entrypoint.sh  kmm_data.csv  pyproject.toml
data_management/: __init__.py  admin.py  apps.py  forms.py  health_checks.py  middleware.py  models.py  signals.py  tests.py  urls.py  views.py
data_management/management/commands/: seed_student.py  seed_students_from_csv.py
data_management/migrations/: 0001_initial.py  0020_add_interest_models.py  0021_seed_interest_data.py  0022_add_isi_sendiri_all_categories.py  0023_categorize_student_fields.py  0024_choices_to_fk_models.py  0025_seed_district_school_scholarship.py  0026_remove_citizenship_status_and_update_region_origin.py  0027_add_email_verification_model.py  0028_fix_student_field_verbose_names.py  0029_remove_nik_field.py  0030_student_photo.py
data_management/templates/: login.html  register.html  staff_login.html  verify_email.html
data_management/templatetags/: split_url.py
data_management/utils/: logging_utils.py
data_management/views/: __init__.py  auth.py  helpers.py  profile.py  staff.py
kmm_web_backend/: asgi.py  urls.py  wsgi.py
kmm_web_backend/settings/: README.md  __init__.py  apps.py  base.py  database.py  local.py  logging.py  production.py  security.py  staging.py  static.py  storage.py
nginx/conf.d/: default.conf
templates/: navbar.html  sidebar.html
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
vite/: __init__.py  views.py
vite/src/: package-lock.json  vite.config.js
vite/templates/: 404.html  base.html
(+17 files in other folders)
