[project]
name = "kmm-web"
version = "0.1.0"
description = "KMM Mesir Web Application - Student Management System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.4",
    "django-constance>=4.3.2",
    "django-guardian>=3.0.3",
    "django-import-export>=4.3.8",
    "django-location-field>=2.7.3",
    "django-simple-history>=3.10.1",
    "django-storages[s3]>=1.14.6",
    "django-tailwind[reload]>=4.2.0",
    "django-unfold>=0.62.0",
    "django-widget-tweaks>=1.5.0",
    "faker>=37.5.3",
    "honcho>=2.0.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "qrcode[pil]>=8.2",
    "weasyprint>=66.0",
    "dj-database-url>=2.0.0",
    "whitenoise>=6.6.0",
    "gunicorn>=21.2.0",
    "psycopg[binary]>=3.1.0",
    "django-redis>=5.4.0",
    "python-json-logger>=2.0.0",
    "sentry-sdk[django]>=1.40.0",
    "django-health-check>=3.17.0",
    "django-cors-headers>=4.3.0",
    "django-htmx>=1.26.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.3",
    "pytest-django>=4.7.0",
    "coverage>=7.3.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]
extend-exclude = '''
/(
    migrations
  | staticfiles
  | vite/static
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*", "staticfiles/*", "vite/static/*"]
known_first_party = ["data_management", "vite", "kmm_web_backend"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["migrations", "staticfiles", "vite/static"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
ignore = ["E501"]